public interface Animal {
    String makeSound();
    String getName();
}