@startuml UMLDiagram
class Mammal {
+ Mammal(String name)
-String name
+String getName()
}
class Main {
+void main(String[] args)
}
class Cat {
+ Cat(String name)
+String makeSound()
}
class Dog {
+ Dog(String name)
+String makeSound()
}
interface Animal {
+String makeSound()
+String getName()
}
Mammal <|-- Cat
Mammal <|-- Dog
Animal <|.. Mammal
@enduml